--- a/src/login/login.fxml
+++ b/src/login/login.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXCheckBox?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginController">
    <children>
-      <HBox alignment="BOTTOM_LEFT" prefHeight="53.0" prefWidth="600.0" spacing="20.0">
+      <HBox prefHeight="53.0" prefWidth="600.0" spacing="20.0">
          <padding>
             <Insets left="50.0" right="50.0" />
          </padding>
@@ -16,9 +18,69 @@
             <Insets top="50.0" />
          </VBox.margin>
          <children>
-            <JFXButton prefHeight="69.0" prefWidth="103.0" text="SIGN IN" />
-            <JFXButton prefHeight="69.0" prefWidth="103.0" text="SIGN UP" />
+            <JFXButton alignment="CENTER" blendMode="GREEN" buttonType="RAISED" defaultButton="true" prefHeight="42.0" prefWidth="95.0" ripplerFill="#24c318" text="SIGN IN" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </JFXButton>
+            <JFXButton alignment="CENTER" blendMode="GREEN" buttonType="RAISED" onAction="#onSignUpLevelClicked" prefHeight="46.0" prefWidth="91.0" ripplerFill="#24c318" text="SIGN UP" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </JFXButton>
+         </children>
+      </HBox>
+      <VBox alignment="CENTER" prefHeight="322.0" prefWidth="600.0">
+         <children>
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <JFXTextField fx:id="userid" blendMode="GREEN" prefHeight="35.0" prefWidth="348.0" promptText="USER ID" unFocusColor="#054add">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="60.0" />
+                     </HBox.margin>
+                  </JFXTextField>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <JFXTextField fx:id="password" blendMode="GREEN" prefHeight="34.0" prefWidth="349.0" promptText="PASSWORD" unFocusColor="#054add">
+                     <HBox.margin>
+                        <Insets left="60.0" />
+                     </HBox.margin>
+                  </JFXTextField>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" prefHeight="87.0" prefWidth="600.0">
+               <children>
+                  <JFXCheckBox onAction="#onKeepMeSignedClick" text="Keep me Signed In" textFill="#3913d3">
+                     <HBox.margin>
+                        <Insets left="60.0" />
+                     </HBox.margin>
+                  </JFXCheckBox>
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </HBox>
+         </children>
+      </VBox>
+      <HBox alignment="CENTER_LEFT" prefHeight="66.0" prefWidth="600.0">
+         <children>
+            <JFXButton blendMode="GREEN" buttonType="RAISED" onAction="#onLoginButtonClick" prefHeight="31.0" prefWidth="401.0" text="Login" textAlignment="CENTER">
+               <HBox.margin>
+                  <Insets left="60.0" />
+               </HBox.margin>
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </JFXButton>
          </children>
       </HBox>
    </children>
+   <opaqueInsets>
+      <Insets left="1.0" right="1.0" top="1.0" />
+   </opaqueInsets>
 </VBox>
