--- a/src/login/login.fxml
+++ b/src/login/login.fxml
@@ -4,16 +4,17 @@
 <?import com.jfoenix.controls.JFXCheckBox?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
+<?import javafx.scene.text.Text?>
 
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginController">
    <children>
       <VBox focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="400.0">
          <children>
-            <HBox prefHeight="53.0" prefWidth="600.0" spacing="20.0">
+            <HBox alignment="CENTER" prefHeight="64.0" prefWidth="400.0" spacing="20.0">
                <padding>
                   <Insets left="50.0" right="50.0" />
                </padding>
@@ -21,46 +22,41 @@
                   <Insets top="50.0" />
                </VBox.margin>
                <children>
-                  <JFXButton alignment="CENTER" blendMode="GREEN" buttonType="RAISED" defaultButton="true" prefHeight="42.0" prefWidth="95.0" ripplerFill="#24c318" text="SIGN IN" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS">
+                  <Text fill="#cd2727" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome" textAlignment="CENTER" wrappingWidth="144.29931640625">
                      <font>
-                        <Font size="16.0" />
+                        <Font size="30.0" />
                      </font>
-                  </JFXButton>
-                  <JFXButton alignment="CENTER" blendMode="GREEN" buttonType="RAISED" onAction="#onSignUpLevelClicked" prefHeight="46.0" prefWidth="91.0" ripplerFill="#24c318" text="SIGN UP" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </JFXButton>
+                  </Text>
                </children>
             </HBox>
-            <VBox alignment="CENTER" prefHeight="322.0" prefWidth="600.0">
+            <VBox alignment="CENTER" prefHeight="210.0" prefWidth="400.0">
                <children>
-                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                  <HBox alignment="CENTER_LEFT" prefHeight="61.0" prefWidth="400.0">
                      <children>
-                        <JFXTextField fx:id="userid" blendMode="GREEN" prefHeight="35.0" prefWidth="348.0" promptText="USER ID" unFocusColor="#054add">
+                        <JFXTextField fx:id="userid" blendMode="GREEN" labelFloat="true" prefHeight="35.0" prefWidth="348.0" promptText="USER ID" unFocusColor="#054add">
                            <font>
                               <Font size="14.0" />
                            </font>
                            <HBox.margin>
-                              <Insets left="60.0" />
+                              <Insets left="30.0" />
                            </HBox.margin>
                         </JFXTextField>
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                  <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="400.0">
                      <children>
-                        <JFXTextField fx:id="password" blendMode="GREEN" prefHeight="34.0" prefWidth="349.0" promptText="PASSWORD" unFocusColor="#054add">
+                        <JFXTextField fx:id="password" blendMode="GREEN" labelFloat="true" prefHeight="34.0" prefWidth="349.0" promptText="PASSWORD" unFocusColor="#054add">
                            <HBox.margin>
-                              <Insets left="60.0" />
+                              <Insets left="30.0" />
                            </HBox.margin>
                         </JFXTextField>
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER_LEFT" prefHeight="87.0" prefWidth="600.0">
+                  <HBox alignment="CENTER_LEFT" prefHeight="53.0" prefWidth="400.0">
                      <children>
                         <JFXCheckBox onAction="#onKeepMeSignedClick" text="Keep me Signed In" textFill="#3913d3">
                            <HBox.margin>
-                              <Insets left="60.0" />
+                              <Insets left="30.0" />
                            </HBox.margin>
                         </JFXCheckBox>
                      </children>
@@ -70,16 +66,22 @@
                   </HBox>
                </children>
             </VBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="66.0" prefWidth="600.0">
+            <HBox alignment="CENTER" prefHeight="66.0" prefWidth="600.0">
                <children>
-                  <JFXButton blendMode="GREEN" buttonType="RAISED" onAction="#onLoginButtonClick" prefHeight="31.0" prefWidth="401.0" text="Login" textAlignment="CENTER">
+                  <JFXButton alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" onAction="#onLoginButtonClick" prefHeight="31.0" prefWidth="401.0" text="Login" textAlignment="CENTER" textFill="#970d0d">
                      <HBox.margin>
-                        <Insets left="60.0" />
+                        <Insets />
                      </HBox.margin>
                      <font>
                         <Font size="24.0" />
                      </font>
                   </JFXButton>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="66.0" prefWidth="600.0" spacing="50.0">
+               <children>
+                  <Hyperlink onAction="#onDontHaveAccountClick" text="Don't have an account?" />
+                  <Hyperlink onAction="#onForgotPasswordClick" text="Forgot password?" />
                </children>
             </HBox>
          </children>
