--- a/src/register/register.fxml
+++ b/src/register/register.fxml
@@ -3,6 +3,8 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXCheckBox?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -14,7 +16,7 @@
          <children>
             <HBox alignment="CENTER" prefHeight="58.0" prefWidth="450.0">
                <children>
-                  <Text fill="#6007e4" strokeType="OUTSIDE" strokeWidth="0.0" text="REGISTER" textAlignment="CENTER" wrappingWidth="158.7294921875">
+                  <Text fill="#ab0c16" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome" textAlignment="CENTER" wrappingWidth="158.7294921875">
                      <font>
                         <Font size="30.0" />
                      </font>
@@ -23,12 +25,12 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="27.0" prefWidth="450.0">
                <children>
-                  <Text fill="#6007e4" strokeType="OUTSIDE" strokeWidth="0.0" text="Create your account. It takes only few moment" textAlignment="CENTER" wrappingWidth="316.7294921875" />
+                  <Text fill="#c32749" strokeType="OUTSIDE" strokeWidth="0.0" text="Create your account. It takes only few moment" textAlignment="CENTER" wrappingWidth="316.7294921875" />
                </children>
             </HBox>
-            <VBox prefHeight="318.0" prefWidth="450.0">
+            <VBox prefHeight="382.0" prefWidth="450.0">
                <children>
-                  <HBox alignment="CENTER" prefHeight="70.0" prefWidth="450.0" spacing="30.0">
+                  <HBox alignment="CENTER" prefHeight="101.0" prefWidth="450.0" spacing="30.0">
                      <children>
                         <JFXTextField fx:id="firstName" alignment="CENTER" focusColor="#1b4ad7" labelFloat="true" prefHeight="26.0" prefWidth="201.0" promptText="FIRST NAME" unFocusColor="#e43838">
                            <font>
@@ -83,6 +85,16 @@
                         <Font size="16.0" />
                      </font>
                   </JFXButton>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+               <children>
+                  <Hyperlink onAction="#onLoginClick" text="Alreadr Registered?" textFill="#2e10e3">
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </Hyperlink>
+                  <Hyperlink onAction="#onLoginClick" text="Login" textFill="#e40f0f" />
                </children>
             </HBox>
          </children>
