--- a/src/forgotpassword/forgotpassword.fxml
+++ b/src/forgotpassword/forgotpassword.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="forgotpassword.ForgotpasswordController">
    <children>
       <VBox prefHeight="448.0" prefWidth="470.0">
@@ -39,7 +38,7 @@
             </HBox>
             <HBox prefHeight="43.0" prefWidth="435.0">
                <children>
-                  <Text fill="#390ab2" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter the email address you used during the registration. Then we'll email a link to this address." wrappingWidth="414.7294921875">
+                  <Text fill="#523a94" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter the email address you used during the registration. Then we'll email a link to this address." wrappingWidth="414.7294921875">
                      <HBox.margin>
                         <Insets left="15.0" right="20.0" />
                      </HBox.margin>
@@ -51,8 +50,8 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="65.0" prefWidth="450.0" spacing="40.0">
                <children>
-                  <JFXButton alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" onAction="#onGetNewPasswordClick" text="Get New Password" textAlignment="CENTER" textFill="#c42512" wrapText="true" />
-                  <JFXButton alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" onAction="#onBackToLoginClick" text="Back To Login" textAlignment="CENTER" textFill="#b2200e" wrapText="true" />
+                  <JFXButton alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" onAction="#onGetNewPasswordClick" text="Get New Password" textAlignment="CENTER" textFill="#5113c2" wrapText="true" />
+                  <JFXButton alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" onAction="#onBackToLoginClick" text="Back To Login" textAlignment="CENTER" textFill="#5113c2" wrapText="true" />
                </children>
             </HBox>
          </children>
