--- a/src/login/login.fxml
+++ b/src/login/login.fxml
@@ -12,87 +12,91 @@
 <?import javafx.scene.text.Text?>
 
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginController">
-   <children>
-      <VBox focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="400.0">
-         <children>
-            <HBox alignment="CENTER" prefHeight="64.0" prefWidth="400.0" spacing="20.0">
-               <padding>
-                  <Insets left="50.0" right="50.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets top="40.0" />
-               </VBox.margin>
-               <children>
-                  <Text fill="#cd2727" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome" textAlignment="CENTER" wrappingWidth="144.29931640625">
-                     <font>
-                        <Font size="30.0" />
-                     </font>
-                  </Text>
-               </children>
-            </HBox>
-            <VBox alignment="CENTER" prefHeight="249.0" prefWidth="400.0">
-               <children>
-                  <HBox alignment="CENTER_LEFT" prefHeight="61.0" prefWidth="400.0">
-                     <children>
-                        <JFXTextField fx:id="userid" labelFloat="true" prefHeight="35.0" prefWidth="348.0" promptText="USER ID" unFocusColor="#054add">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="30.0" top="30.0" />
-                           </HBox.margin>
-                        </JFXTextField>
-                     </children>
-                  </HBox>
-                  <HBox fx:id="password" alignment="CENTER_LEFT" prefHeight="61.0" prefWidth="400.0">
-                     <children>
-                        <JFXPasswordField fx:id="password" labelFloat="true" prefHeight="35.0" prefWidth="349.0" promptText="PASSWORD" unFocusColor="#3013d0" />
-                     </children>
-                     <VBox.margin>
-                        <Insets left="30.0" top="30.0" />
-                     </VBox.margin>
-                  </HBox>
-                  <HBox alignment="CENTER_LEFT" prefHeight="53.0" prefWidth="400.0">
-                     <children>
-                        <JFXCheckBox onAction="#onKeepMeSignedClick" text="Keep me Signed In" textFill="#3913d3">
-                           <HBox.margin>
-                              <Insets left="30.0" />
-                           </HBox.margin>
-                        </JFXCheckBox>
-                     </children>
-                     <VBox.margin>
-                        <Insets top="30.0" />
-                     </VBox.margin>
-                  </HBox>
-               </children>
-            </VBox>
-            <HBox alignment="CENTER" prefHeight="34.0" prefWidth="400.0">
-               <children>
-                  <Text fx:id="error" fill="#f20303" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="364.7294921875" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="66.0" prefWidth="600.0">
-               <children>
-                  <JFXButton alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" onAction="#onLoginButtonClick" prefHeight="31.0" prefWidth="401.0" text="Login" textAlignment="CENTER" textFill="#0909a1">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </JFXButton>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="66.0" prefWidth="600.0" spacing="50.0">
-               <children>
-                  <Hyperlink onAction="#onDontHaveAccountClick" text="Don't have an account?" />
-                  <Hyperlink onAction="#onForgotPasswordClick" text="Forgot password?" />
-               </children>
-            </HBox>
-         </children>
-         <opaqueInsets>
-            <Insets left="1.0" right="1.0" top="1.0" />
-         </opaqueInsets>
-      </VBox>
-   </children>
+    <children>
+        <VBox focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="400.0">
+            <children>
+                <HBox alignment="CENTER" prefHeight="64.0" prefWidth="400.0" spacing="20.0">
+                    <padding>
+                        <Insets left="50.0" right="50.0" />
+                    </padding>
+                    <VBox.margin>
+                        <Insets top="40.0" />
+                    </VBox.margin>
+                    <children>
+                        <Text fill="#cd2727" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome" textAlignment="CENTER" wrappingWidth="144.29931640625">
+                            <font>
+                                <Font size="30.0" />
+                            </font>
+                        </Text>
+                    </children>
+                </HBox>
+                <VBox alignment="CENTER" prefHeight="249.0" prefWidth="400.0">
+                    <children>
+                        <HBox alignment="CENTER_LEFT" prefHeight="61.0" prefWidth="400.0">
+                            <children>
+                                <JFXTextField fx:id="userid" labelFloat="true" prefHeight="35.0" prefWidth="348.0" promptText="USER ID" unFocusColor="#054add">
+                                    <font>
+                                        <Font size="14.0" />
+                                    </font>
+                                    <HBox.margin>
+                                        <Insets left="30.0" top="30.0" />
+                                    </HBox.margin>
+                                </JFXTextField>
+                            </children>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" prefHeight="61.0" prefWidth="400.0">
+                            <children>
+                                <JFXPasswordField fx:id="password" labelFloat="true" prefHeight="26.0" prefWidth="401.0" promptText="PASSWORD" unFocusColor="#170aa8">
+                                    <font>
+                                        <Font size="15.0" />
+                                    </font>
+                                </JFXPasswordField>
+                            </children>
+                            <VBox.margin>
+                                <Insets left="30.0" top="30.0" />
+                            </VBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" prefHeight="53.0" prefWidth="400.0">
+                            <children>
+                                <JFXCheckBox onAction="#onKeepMeSignedClick" text="Keep me Signed In" textFill="#3913d3">
+                                    <HBox.margin>
+                                        <Insets left="30.0" />
+                                    </HBox.margin>
+                                </JFXCheckBox>
+                            </children>
+                            <VBox.margin>
+                                <Insets top="30.0" />
+                            </VBox.margin>
+                        </HBox>
+                    </children>
+                </VBox>
+                <HBox alignment="CENTER" prefHeight="34.0" prefWidth="400.0">
+                    <children>
+                        <Text fx:id="error" fill="#f20303" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="364.7294921875" />
+                    </children>
+                </HBox>
+                <HBox alignment="CENTER" prefHeight="66.0" prefWidth="600.0">
+                    <children>
+                        <JFXButton alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" onAction="#onLoginButtonClick" prefHeight="31.0" prefWidth="401.0" text="Login" textAlignment="CENTER" textFill="#0909a1">
+                            <HBox.margin>
+                                <Insets />
+                            </HBox.margin>
+                            <font>
+                                <Font size="24.0" />
+                            </font>
+                        </JFXButton>
+                    </children>
+                </HBox>
+                <HBox alignment="CENTER" prefHeight="66.0" prefWidth="600.0" spacing="50.0">
+                    <children>
+                        <Hyperlink onAction="#onDontHaveAccountClick" text="Don't have an account?" />
+                        <Hyperlink onAction="#onForgotPasswordClick" text="Forgot password?" />
+                    </children>
+                </HBox>
+            </children>
+            <opaqueInsets>
+                <Insets left="1.0" right="1.0" top="1.0" />
+            </opaqueInsets>
+        </VBox>
+    </children>
 </VBox>
