--- a/src/forgotpassword/forgotpassword.fxml
+++ b/src/forgotpassword/forgotpassword.fxml
@@ -29,7 +29,7 @@
             </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="63.0" prefWidth="450.0">
                <children>
-                  <JFXTextField fx:id="email" labelFloat="true" prefHeight="31.0" prefWidth="426.0" promptText="Enter your Email Id" unFocusColor="#c60d0d">
+                  <JFXTextField fx:id="email" labelFloat="true" onMouseClicked="#clearError" prefHeight="31.0" prefWidth="426.0" promptText="Enter your Email Id" unFocusColor="#c60d0d">
                      <padding>
                         <Insets left="20.0" right="15.0" />
                      </padding>
@@ -47,6 +47,14 @@
                      </font>
                   </Text>
                </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="450.0" spacing="40.0">
+               <children>
+                  <Text fx:id="error" fill="#d00b0b" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="402.7294921875" />
+               </children>
+               <padding>
+                  <Insets left="20.0" />
+               </padding>
             </HBox>
             <HBox alignment="CENTER" prefHeight="65.0" prefWidth="450.0" spacing="40.0">
                <children>
