--- a/src/Front_end/resources/EditProfile.fxml
+++ b/src/Front_end/resources/EditProfile.fxml
@@ -11,13 +11,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="403.0" prefWidth="492.0" style="-fx-background-color: #becfb4;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Editprofile">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="403.0" prefWidth="492.0" style="-fx-background-color: #becfb4;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Front_end.controllers.EditProfileController">
    <children>
       <VBox layoutX="-1.0" prefHeight="403.0" prefWidth="492.0" style="-fx-background-color: white;">
          <children>
             <HBox alignment="CENTER_LEFT" prefHeight="86.0" prefWidth="422.0" style="-fx-background-color: #ccff99;">
                <children>
-                  <ImageView fx:id="back" fitHeight="62.0" fitWidth="32.0" onMouseClicked="#BackWindow" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="back" fitHeight="62.0" fitWidth="32.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@icons/2391327-200.png" />
                      </image>
@@ -28,49 +28,56 @@
                      </image>
                   </ImageView>
                   <Label prefHeight="87.0" prefWidth="47.0" />
-                  <Label prefHeight="55.0" prefWidth="250.0" text="Alice johnson" textFill="#02612e">
+                  <Label fx:id="username" prefHeight="55.0" prefWidth="250.0" text="Alice johnson" textFill="#02612e">
                      <font>
                         <Font name="System Bold Italic" size="18.0" />
                      </font>
                   </Label>
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="97.0" prefHeight="55.0" prefWidth="492.0">
+            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="97.0" prefHeight="64.0" prefWidth="492.0">
                <children>
                   <Label prefHeight="42.0" prefWidth="55.0" />
-                  <Label contentDisplay="RIGHT" prefHeight="42.0" prefWidth="67.0" text="FirstName:" textAlignment="RIGHT">
+                  <Label contentDisplay="RIGHT" prefHeight="42.0" prefWidth="93.0" text="FIRSTNAME" textAlignment="RIGHT">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <TextField prefHeight="25.0" prefWidth="263.0" />
+                  <TextField fx:id="fname" prefHeight="25.0" prefWidth="263.0" />
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="149.0" prefHeight="60.0" prefWidth="492.0">
+            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="149.0" prefHeight="55.0" prefWidth="492.0">
                <children>
                   <Label prefHeight="42.0" prefWidth="55.0" />
-                  <Label contentDisplay="RIGHT" prefHeight="42.0" prefWidth="67.0" text="LastName:" textAlignment="RIGHT">
+                  <Label contentDisplay="RIGHT" prefHeight="42.0" prefWidth="95.0" text="LASTNAME" textAlignment="RIGHT">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <TextField prefHeight="25.0" prefWidth="263.0" />
+                  <TextField fx:id="lname" prefHeight="25.0" prefWidth="263.0" />
                </children>
             </HBox>
-            <Pane prefHeight="73.0" prefWidth="348.0">
+            <HBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="492.0">
                <children>
-                  <Button fx:id="update" layoutX="196.0" layoutY="16.0" mnemonicParsing="false" onAction="#onupdateButtonClick" prefHeight="42.0" prefWidth="101.0" text="Update" textFill="#08c337">
+                  <Label prefHeight="42.0" prefWidth="55.0" />
+                  <Label contentDisplay="RIGHT" prefHeight="42.0" prefWidth="95.0" text="INTERESTS" textAlignment="RIGHT">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="interest" prefHeight="25.0" prefWidth="263.0" />
+               </children>
+            </HBox>
+            <Pane prefHeight="74.0" prefWidth="492.0">
+               <children>
+                  <Button fx:id="update" layoutX="189.0" layoutY="17.0" mnemonicParsing="false" onAction="#onupdateButtonClick" prefHeight="42.0" prefWidth="101.0" text="Update" textFill="#08c337">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Button>
                </children>
             </Pane>
-            <Label fx:id="msg" prefHeight="45.0" prefWidth="493.0" textFill="#da0c0c">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
+            <Label fx:id="msg" alignment="CENTER" prefHeight="39.0" prefWidth="240.0" textFill="#ee0b0b" />
          </children>
       </VBox>
    </children>
