--- a/src/Front_end/resources/ShowProfile.fxml
+++ b/src/Front_end/resources/ShowProfile.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="403.0" prefWidth="492.0" style="-fx-background-color: #becfb4;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.FriendListController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="403.0" prefWidth="492.0" style="-fx-background-color: #becfb4;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Front_end.controllers.ShowProfile">
    <children>
       <VBox layoutX="-1.0" prefHeight="403.0" prefWidth="492.0" style="-fx-background-color: white;">
          <children>
@@ -27,17 +27,17 @@
                      </image>
                   </ImageView>
                   <Label prefHeight="87.0" prefWidth="47.0" />
-                  <Label prefHeight="55.0" prefWidth="250.0" text="Alice johnson" textFill="#02612e">
+                  <Label fx:id="username" prefHeight="55.0" prefWidth="250.0" textFill="#02612e">
                      <font>
                         <Font name="System Bold Italic" size="18.0" />
                      </font>
                   </Label>
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="59.0" prefWidth="492.0">
+            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="42.0" prefWidth="488.0">
                <children>
                   <Label prefHeight="42.0" prefWidth="55.0" />
-                  <Label contentDisplay="RIGHT" prefHeight="42.0" prefWidth="67.0" text="EMAIL ID:" textAlignment="RIGHT">
+                  <Label contentDisplay="RIGHT" prefHeight="42.0" prefWidth="98.0" text="EMAIL ID:" textAlignment="RIGHT">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -49,10 +49,10 @@
                   </Label>
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="97.0" prefHeight="55.0" prefWidth="492.0">
+            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="97.0" prefHeight="41.0" prefWidth="492.0">
                <children>
                   <Label prefHeight="42.0" prefWidth="55.0" />
-                  <Label contentDisplay="RIGHT" prefHeight="42.0" prefWidth="67.0" text="FirstName:" textAlignment="RIGHT">
+                  <Label contentDisplay="RIGHT" prefHeight="41.0" prefWidth="98.0" text="FIRST NAME:" textAlignment="RIGHT">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -64,10 +64,10 @@
                   </Label>
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="149.0" prefHeight="60.0" prefWidth="492.0">
+            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="149.0" prefHeight="47.0" prefWidth="492.0">
                <children>
                   <Label prefHeight="42.0" prefWidth="55.0" />
-                  <Label contentDisplay="RIGHT" prefHeight="42.0" prefWidth="67.0" text="LastName:" textAlignment="RIGHT">
+                  <Label contentDisplay="RIGHT" prefHeight="42.0" prefWidth="99.0" text="LAST NAME:" textAlignment="RIGHT">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -79,20 +79,31 @@
                   </Label>
                </children>
             </HBox>
-            <Pane prefHeight="73.0" prefWidth="348.0">
+            <HBox alignment="CENTER_LEFT" prefHeight="47.0" prefWidth="492.0">
                <children>
-                  <Button fx:id="GetMore" layoutX="196.0" layoutY="16.0" mnemonicParsing="false" onAction="#ongetmoreButtonClick" prefHeight="42.0" prefWidth="101.0" text="GetMore" textFill="#08c337">
+                  <Label prefHeight="42.0" prefWidth="55.0" />
+                  <Label contentDisplay="RIGHT" prefHeight="42.0" prefWidth="100.0" text="INTERESTS:" textAlignment="RIGHT">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lname1" prefHeight="50.0" prefWidth="227.0" text="interest">
+                     <font>
+                        <Font name="Arial" size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+            <Pane prefHeight="70.0" prefWidth="492.0">
+               <children>
+                  <Button fx:id="Edit" layoutX="196.0" layoutY="14.0" mnemonicParsing="false" onAction="#onEditButtonClick" prefHeight="42.0" prefWidth="101.0" text="Edit" textFill="#08c337">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Button>
                </children>
             </Pane>
-            <Label fx:id="msg" prefHeight="45.0" prefWidth="459.0" textFill="#da0c0c">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
+            <Label fx:id="msg" alignment="CENTER" prefHeight="36.0" prefWidth="213.0" textAlignment="CENTER" />
          </children>
       </VBox>
    </children>
